force-app/main/default/objects/FSSAPMaterialNameAndOverrideField__c/FSSAPMaterialNameAndOverrideField__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This used to store a Sap Material Id and corresponding cartridge override field</description>
    <label>FSSAPMaterialNameAndOverrideField</label>
</CustomObject>