force-app/main/default/objects/FSSAPMaterialNameAndOverrideField__c/fields/Cartridge_Name__c.field-meta.xml
<CustomField>
    <fullName>Cartridge_Name__c</fullName>
    <label>Cartridge Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>