force-app/main/default/objects/FSSAPMaterialNameAndOverrideField__c/fields/OverrideField__c.field-meta.xml
<CustomField>
    <fullName>OverrideField__c</fullName>
    <label>OverrideField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>