force-app/main/default/objects/FSSAPMaterialNameAndOverrideField__c/fields/SAP_Material_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Name__c</fullName>
    <label>SAP Material Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>