force-app/main/default/objects/FSSAPMaterialNameAndOverrideField__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cartridge_Name__c</columns>
    <columns>SAP_Material_Name__c</columns>
    <columns>OverrideField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>